--- a/SpotManager/SpotManager/MainWindow.xaml
+++ b/SpotManager/SpotManager/MainWindow.xaml
@@ -5,24 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SpotManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Width="400" Height="370" Background="Gray">
     <Grid>
         <StackPanel>
-            <Grid Width="800" VerticalAlignment="Center" HorizontalAlignment="Left" Background="#2E3B4E">
+            <Grid Background="#2E3B4E">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
-                <Image Grid.Column="0" Source="img\logo_64px.png" Width="64" Margin="16" />
-                <Label Grid.Column="1" Content="Spot Manager" FontSize="35" FontFamily="Artifakt Element Black" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <Image Grid.Column="0" Source="/logo_64px.png" Width="64" Margin="16" />
+                <Label Foreground="White" Grid.Column="1" Content="Spot Manager" FontSize="35" FontFamily="Artifakt Element Black" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold"/>
             </Grid>
-            <Separator Height="4" Background="White"/>
-            <StackPanel Height="250" Background="Gray">
+            <Separator Background="White"/>
+            <StackPanel>
                 <Label Content="Numéro d'Admission" Margin="60,20,60,0" Padding="6"/>
-                <TextBlock TextWrapping="Wrap" Text="No de DA" Foreground="Gray" FontSize="12" TextAlignment="Left" Margin="60,0,60,0" Padding="6" Background="LightGray"/>
+                <TextBox FontSize="12" TextAlignment="Left" Margin="60,0,60,0" Padding="6" Background="LightGray"/>
                 <Label Content="Mot de Passe" Margin="60,20,60,0" Padding="6"/>
-                <TextBlock TextWrapping="Wrap" Text="MDP" Foreground="Gray" FontSize="12" TextAlignment="Left" Margin="60,0,60,0" Padding="6" Background="LightGray"/>
-                <Button Content="se connecter" Foreground="Gray" FontSize="15" Padding="6" HorizontalAlignment="Center" Margin="60,20,60,0" />
+                <TextBox FontSize="12" TextAlignment="Left" Margin="60,0,60,0" Padding="6" Background="LightGray"/>
+                <Button Content="se connecter" FontSize="15" Padding="6" HorizontalAlignment="Center" Margin="20,20,20,20" Click="seConnecter" />
             </StackPanel>
         </StackPanel>
 
