deletion view added

--- a/SpotManager/SpotManager/HomePage.xaml
+++ b/SpotManager/SpotManager/HomePage.xaml
@@ -40,7 +40,7 @@
                    Margin="20,0,20,10"
                    Height="50"
                    Background="#2D6FBF"
-                   Foreground="White"/>
+                   Foreground="White" Click="deleteReservationBtn"/>
             <Button Content="Réserver un local"
                    Margin="20,0,20,20"
                    Height="50"
