--- a/SpotManager/SpotManager/WindowReservationLocal.xaml
+++ b/SpotManager/SpotManager/WindowReservationLocal.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SpotManager.WindowCreationReservation"
+﻿<Window x:Class="SpotManager.WindowReservationLocal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,14 +6,15 @@
         xmlns:local="clr-namespace:SpotManager"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="WindowCreationReservation" Height="450" Width="800">
+        Title="WindowReservationLocal" Height="300" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="93"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Border BorderBrush="Gray" BorderThickness="1" Margin="8,8,8,0" Padding="2,2,2,2">
+        <Border BorderBrush="Gray" BorderThickness="1" Margin="8" Padding="2,2,2,2">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
@@ -32,40 +33,26 @@
                 <xctk:TimePicker Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
             </Grid>
         </Border>
-        <Grid Grid.Row="1">
-            <TabControl Padding="2,2,2,2" Margin="8,8,8,8">
-                <TabItem Header="S-013">
-                    <Grid Background="#FFE5E5E5">
-                        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}"/>
-                    </Grid>
-                </TabItem>
-                <TabItem Header="S-021">
-                    <Grid Background="#FFE5E5E5">
-                        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}"/>
-                    </Grid>
-                </TabItem>
-                <TabItem Header="S-027">
-                    <Grid Background="#FFE5E5E5">
-                        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}"/>
-                    </Grid>
-                </TabItem>
-                <TabItem Header="S-028">
-                    <Grid Background="#FFE5E5E5">
-                        <Image Width="100" Height="100" Margin="347,107,347,54"/>
-                        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}"/>
-                    </Grid>
-                </TabItem>
-            </TabControl>
+
+        <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <RadioButton Content="S-013"/>
+            <RadioButton Content="S-021" Grid.Row="1"/>
+            <RadioButton Content="S-027" Grid.Row="2"/>
+            <RadioButton Content="S-028" Grid.Row="3"/>
         </Grid>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <Border BorderBrush="Gray" Background="LightGray" BorderThickness="1" Margin="8" Padding="2,2,2,2" Grid.Row="2">
+            <Label Content="Ceci va annuler la reservation de X personne" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </Border>
+
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="Annuler" Width="80" Height="24" Margin="0,0,8,8" Click="annulerBtn"/>
             <Button Content="Reserver" Height="24" Width="80" Margin="0,0,8,8"/>
-            <TextBox
-                Text="{Binding Name, Mode=TwoWay}"
-                Width="80" Height="24" 
-            />
-            <Label Content="{Binding Occur}"/>
         </StackPanel>
-
     </Grid>
 </Window>
